--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,6 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
+config.json
 
 # End of https://www.toptal.com/developers/gitignore/api/node
