Added Airplane Controller and Services

--- a/.gitignore
+++ b/.gitignore
@@ -141,5 +141,5 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 config.json
-
+notes.txt
 # End of https://www.toptal.com/developers/gitignore/api/node
